--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.5",
     "typescript": "^4.8.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
