--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "npx prettier --write src/",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "eslint": "npx eslint src/ --fix"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
@@ -56,6 +57,10 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.0",
+    "eslint-plugin-react": "^7.31.7",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1"
